--- a/Bootstrapassignment.html
+++ b/Bootstrapassignment.html
@@ -10,68 +10,8 @@
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
 
-  <style>
-   
-     body{
-      background-color: black;
-    }
-     
-    header{
-      background-color: aqua;
-      
-    }
-    header h1{
-      margin-left: 500px
-    }
-
-    .carose1{
-      margin-left: 300px;
-      margin-right: 300px;
-    }
-    .cards-ex{
-      display: flex;
-      justify-content: center;
-
-    }
-    .carouselExample{
-      align-items: center;
-      height: 100%;
-      width: 100%;
   
-    }
-    .carousel-item {
-      align-items: center;
-      height: 100%;
-      width: 100%;
- 
-    }
-
-    .pic {
-      width: 100%;
-    }
-
-    .card1 {
-      height: 300px;
-      display: flex;
-      justify-content:center;
-    }
-
-    .card{
-      width: 200px;
-      height: 275px;
-      margin: 10px;
-      padding: auto;
-    }
-    .pic{
-      align-items: center;
-
-    }
-    .footerCopyright{
-      background-color: blue;
-      height: 50px;
-    }
-  </style>
-
+<link href="AssignmentStyle.css" rel="stylesheet" />
 
 
 </head>
